Add missing condition to depth swapchain handling

Fixes: QTBUG-129990
Change-Id: I3f91504cac255b35087c59b7cd4cec119c19cb29
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit 2626397861af1b2b78485ce06ac33ed182174303)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>